# EvaluateQA

./: LICENSE  README.md  pyproject.toml
evaluateqa/mintaka/: __init__.py  evaluate.py
