[tool.poetry]
name = "evaluateqa"
version = "0.1.3"
description = ""
authors = ["Mikhail Salnikov <2613180+MihailSalnikov@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"

repository = "https://github.com/MihailSalnikov/EvaluateQA"
keywords = ["QA", "KGQA", "ODQA", "Evaluate"]

[tool.poetry.dependencies]
python = "^3.8"
ujson = "^5.7.0"
joblib = "^1.2.0"
pandas = "^2.0.1"
regex = "^2023.6.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
